--- a/index.html
+++ b/index.html
@@ -1,81 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Texting Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      text-align: center;
-    }
-    #messages {
-      border: 1px solid #ccc;
-      height: 300px;
-      overflow-y: auto;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-    #messageInput {
-      width: 75%;
-      padding: 10px;
-    }
-    #sendButton {
-      padding: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chess Website</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard.min.css">
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        #board {
+            width: 400px;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
-  <h1>Free Texting Website</h1>
-  <div id="messages"></div>
-  <input type="text" id="messageInput" placeholder="Type your message" />
-  <button id="sendButton">Send</button>
+    <h1>Play Chess</h1>
+    <div id="board"></div>
+    <button onclick="resetGame()">Reset Game</button>
 
-  <!-- Firebase Scripts -->
-  <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-database.js"></script>
+    <script>
+        var board;
+        var game = new Chess();
 
-  <script>
-    // Step 1: Configure Firebase
-    const firebaseConfig = {
-      apiKey: "YOUR_FIREBASE_API_KEY",
-      authDomain: "YOUR_FIREBASE_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_FIREBASE_PROJECT_ID.firebaseio.com",
-      projectId: "YOUR_FIREBASE_PROJECT_ID",
-      storageBucket: "YOUR_FIREBASE_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+        function onDragStart(source, piece) {
+            if (game.game_over()) return false;
+            if (piece.search(/^b/) !== -1) return false;
+        }
 
-    // Step 2: Initialize Firebase
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+        function onDrop(source, target) {
+            var move = game.move({ from: source, to: target, promotion: 'q' });
+            if (move === null) return 'snapback';
+        }
 
-    // Step 3: Texting Logic
-    const messagesDiv = document.getElementById("messages");
-    const messageInput = document.getElementById("messageInput");
-    const sendButton = document.getElementById("sendButton");
+        function onSnapEnd() {
+            board.position(game.fen());
+        }
 
-    // Listen for new messages in the database
-    db.ref("messages").on("child_added", (snapshot) => {
-      const messageData = snapshot.val();
-      const messageElement = document.createElement("div");
-      messageElement.textContent = messageData.text;
-      messagesDiv.appendChild(messageElement);
-      messagesDiv.scrollTop = messagesDiv.scrollHeight; // Auto-scroll to the bottom
-    });
+        function resetGame() {
+            game.reset();
+            board.position('start');
+        }
 
-    // Send a new message
-    sendButton.addEventListener("click", () => {
-      const messageText = messageInput.value.trim();
-      if (messageText) {
-        db.ref("messages").push({ text: messageText }); // Save to database
-        messageInput.value = ""; // Clear input field
-      }
-    });
-  </script>
+        board = Chessboard('board', {
+            draggable: true,
+            position: 'start',
+            onDragStart: onDragStart,
+            onDrop: onDrop,
+            onSnapEnd: onSnapEnd
+        });
+    </script>
 </body>
 </html>
+
